--- a/templates/base.html
+++ b/templates/base.html
@@ -75,9 +75,9 @@
 
         </footer><!-- /#contentinfo -->
 
-{% include 'analytics.html' %}
+<!-- {% include 'analytics.html' %}
 {% include 'piwik.html' %}
 {% include 'gosquared.html' %}
-{% include 'disqus_script.html' %}
+{% include 'disqus_script.html' %} -->
 </body>
 </html>
