--- a/templates/article_infos.html
+++ b/templates/article_infos.html
@@ -4,7 +4,7 @@
         </abbr>
 
         <address class="vcard author">
-                par <a class="url fn" href="{{ SITEURL }}/{{ article.author.url }}">{{ article.author }}</a> dans <a href="{{ SITEURL }}/{{ article.category.url }}">{{ article.category }}</a>
+                <a class="url fn" href="{{ SITEURL }}/{{ article.author.url }}">{{ article.author }}</a>: <a href="{{ SITEURL }}/{{ article.category.url }}">{{ article.category }}</a>
         </address>
 {% if PDF_PROCESSOR %}<p><a href="{{ SITEURL }}/pdf/{{ article.slug }}.pdf">Version pdf</a></p>{% endif %}
 {% include 'taglist.html' %}
