--- a/static/css/main.css
+++ b/static/css/main.css
@@ -27,8 +27,8 @@ body {
     background-attachment:fixed, fixed, scroll;
     background-position: center top, left top, left top;
     background-color: #FFF;
-    font-family:  'Bryant', sans-serif;
-    font-size: 15px ;
+    font-family: 'Linden Hill', Georgia, serif;
+    font-size: 19px;
     line-height: 1.429;
     margin: 0;
     padding: 0;
@@ -47,7 +47,7 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: 400;
 	line-height: 1.1;
 	margin-bottom: .8em;
-	font-family: 'Lobster', cursive;
+	font-family: 'LindenHill', Georgia, cursive;
 }
 
 h3, h4, h5, h6 { margin-top: .8em; }
@@ -228,7 +228,7 @@ img.left, figure.left {float: right; margin: 0 0 2em 2em;}
 		margin: 0 auto 2em auto;
 		padding: 0;
 		text-align: center;
-		width: 600px;
+		width: 800px;
 		border: solid 1px #000;
 		opacity: .9;
 
