--- a/templates/page.html
+++ b/templates/page.html
@@ -6,5 +6,18 @@
     {% if PDF_PROCESSOR %}<a href="{{ SITEURL }}/pdf/{{ page.slug }}.pdf">get
     the pdf</a>{% endif %}
     {{ page.content }}
+    <script>
+      var idcomments_acct = 'a9caf2a73f0584fce57ce54adee072f2';
+      var idcomments_post_id;
+      var idcomments_post_url;
+    </script>
+    <span id="IDCommentsPostTitle" style="display:none"></span>
+    <script type='text/javascript' src='https://www.intensedebate.com/js/genericCommentWrapperV2.js'></script>
+    <script>
+    var idcomments_acct = 'a9caf2a73f0584fce57ce54adee072f2';
+    var idcomments_post_id;
+    var idcomments_post_url;
+    </script>
+    <script type="text/javascript" src="https://www.intensedebate.com/js/genericLinkWrapperV2.js"></script>
 </section>
 {% endblock %}
