--- a/static/css/main.css
+++ b/static/css/main.css
@@ -11,8 +11,8 @@
 @import url("reset.css");
 @import url("pygment.css");
 @import url("typogrify.css");
-@import url(https://fonts.googleapis.com/css?family=LindenHill);
-/*@import url(http://fonts.googleapis.com/css?family=Droid+Sans);*/
+@import url(https://fonts.googleapis.com/css?Cormorant+Garamond:400,700i);
+	/*@import url(http://fonts.googleapis.com/css?family=Droid+Sans);*/
 
 @font-face {
     font-family: "Bryant";
@@ -27,7 +27,7 @@ body {
     background-attachment:fixed, fixed, scroll;
     background-position: center top, left top, left top;
     background-color: #FFF;
-    font-family: 'Linden Hill', Georgia, serif;
+    font-family: 'Cormorant Garamond', serif;
     font-size: 19px;
     line-height: 1.429;
     margin: 0;
@@ -47,7 +47,8 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: 400;
 	line-height: 1.1;
 	margin-bottom: .8em;
-	font-family: 'LindenHill', Georgia, cursive;
+	font-family: 'Cormorant Garamond', serif;
+	font-style: italic;
 }
 
 h3, h4, h5, h6 { margin-top: .8em; }
