--- a/static/css/wide.css
+++ b/static/css/wide.css
@@ -1,7 +1,7 @@
 @import url("main.css");
 
 body {
-    font:1.3em/1.3 "Linden Hill","Georgia",Georgia,serif,sans-serif;
+    font:1.3em/1.3 "Cormorant Garamont", serif;
 }
 
 .post-info{
