--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -9,3 +9,5 @@
     pageTracker._trackPageview();
     } catch(err) {}</script>
 {% endif %}
+ <script src="https://www.w3counter.com/tracker.js?id=114073"></script> 
+
