--- a/templates/page.html
+++ b/templates/page.html
@@ -19,5 +19,6 @@
     var idcomments_post_url;
     </script>
     <script type="text/javascript" src="https://www.intensedebate.com/js/genericLinkWrapperV2.js"></script>
+    <script type="text/javascript" src="https://www.w3counter.com/tracker.js?id=114073"></script> 
 </section>
 {% endblock %}
